# ansible-role-visual-studio-code

./: .bumpversion.cfg  .gitignore  .overcommit.yml  .pre-commit-config.yaml  .travis.yml  LICENSE  Pipfile  README.md  pyproject.toml
.github/workflows/: molecule.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: .gitignore  molecule.yml  playbook.yml  prepare.yml  requirements.yml
molecule/default/.molecule/: Dockerfile_centos  Dockerfile_fedora  ansible_inventory.yml
molecule/default/tests/: test_vscode.py
tasks/: debian.yml  fedora.yml  install_extensions.yml  main.yml  redhat.yml  suse.yml
vars/: main.yml
