[tool.poetry]
name = "ansible-role-visual-studio-code"
version = "0.6.3"
description = ""
authors = ["Gordon Schulz <gordon.schulz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
molecule = "^2.22"
bumpversion = "^0.5.3"
docker-py = "^1.10"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
